Redirect Uri is now fetched dynamically from current request context instead of db.